--- a/ChatApp/Base.lproj/Main.storyboard
+++ b/ChatApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -9,56 +9,106 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TTh-vF-qaT"/>
+                        <viewControllerLayoutGuide type="bottom" id="KJM-pp-b8h"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b1Q-fS-biy">
-                                <rect key="frame" x="20" y="159" width="84" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b1Q-fS-biy">
+                                <rect key="frame" x="20" y="147" width="84" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZWQ-Da-pJ6">
-                                <rect key="frame" x="20" y="239" width="79" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZWQ-Da-pJ6">
+                                <rect key="frame" x="20" y="226" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="cgW-7Y-ZdA">
-                                <rect key="frame" x="20" y="188" width="280" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cgW-7Y-ZdA">
+                                <rect key="frame" x="20" y="176" width="280" height="30"/>
+                                <color key="backgroundColor" red="0.39607843139999999" green="0.67843137249999996" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Yee-3r-PMi"/>
+                                </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="l2Q-Co-1sX">
-                                <rect key="frame" x="20" y="268" width="280" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l2Q-Co-1sX">
+                                <rect key="frame" x="20" y="255" width="280" height="30"/>
+                                <color key="backgroundColor" red="0.39607843139999999" green="0.67843137249999996" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="sI7-Ns-rlx"/>
+                                </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chit Chat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2kt-sU-vRh">
-                                <rect key="frame" x="124" y="67" width="72" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chit Chat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2kt-sU-vRh">
+                                <rect key="frame" x="105" y="67" width="110" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="cLa-n6-v6f">
-                                <rect key="frame" x="103" y="340" width="114" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Sign In / Sign Up"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLa-n6-v6f">
+                                <rect key="frame" x="95" y="315" width="130" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="q7J-yC-huS"/>
+                                    <constraint firstAttribute="height" constant="40" id="rkx-Tp-YNb"/>
+                                </constraints>
+                                <state key="normal" title="Sign In / Sign Up">
+                                    <color key="titleColor" red="0.031372549020000001" green="0.41176470590000003" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="onSubmitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ziU-lW-EpK"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.396078431372549" green="0.67843137254901964" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="l2Q-Co-1sX" firstAttribute="trailing" secondItem="cgW-7Y-ZdA" secondAttribute="trailing" id="1za-0p-3xQ"/>
+                            <constraint firstItem="b1Q-fS-biy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="4oY-re-qJn"/>
+                            <constraint firstItem="ZWQ-Da-pJ6" firstAttribute="top" secondItem="cgW-7Y-ZdA" secondAttribute="bottom" constant="20" id="7lZ-OI-GL8"/>
+                            <constraint firstItem="2kt-sU-vRh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="85C-1M-pTI"/>
+                            <constraint firstAttribute="trailing" secondItem="cgW-7Y-ZdA" secondAttribute="trailing" constant="20" id="8SB-16-Mjo"/>
+                            <constraint firstItem="cLa-n6-v6f" firstAttribute="top" secondItem="l2Q-Co-1sX" secondAttribute="bottom" constant="30" id="FIa-7C-YrS"/>
+                            <constraint firstItem="cLa-n6-v6f" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GCK-Lm-jl6"/>
+                            <constraint firstItem="cgW-7Y-ZdA" firstAttribute="top" secondItem="b1Q-fS-biy" secondAttribute="bottom" constant="8" id="aW2-Fp-9Rn"/>
+                            <constraint firstItem="l2Q-Co-1sX" firstAttribute="top" secondItem="ZWQ-Da-pJ6" secondAttribute="bottom" constant="8" id="hfv-kN-ONG"/>
+                            <constraint firstItem="b1Q-fS-biy" firstAttribute="top" secondItem="2kt-sU-vRh" secondAttribute="bottom" constant="50" id="iMM-z7-8Ge"/>
+                            <constraint firstItem="2kt-sU-vRh" firstAttribute="top" secondItem="TTh-vF-qaT" secondAttribute="bottom" constant="47" id="l6u-j7-dqG"/>
+                            <constraint firstItem="cgW-7Y-ZdA" firstAttribute="leading" secondItem="b1Q-fS-biy" secondAttribute="leading" id="lM3-YC-bpa"/>
+                            <constraint firstItem="l2Q-Co-1sX" firstAttribute="leading" secondItem="cgW-7Y-ZdA" secondAttribute="leading" id="rRk-Zr-69i"/>
+                            <constraint firstItem="ZWQ-Da-pJ6" firstAttribute="leading" secondItem="b1Q-fS-biy" secondAttribute="leading" id="sbE-G1-mwy"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="passwordTextField" destination="l2Q-Co-1sX" id="8VC-g8-ZNA"/>
+                        <outlet property="submitButton" destination="cLa-n6-v6f" id="7Bb-BQ-reZ"/>
                         <outlet property="usernameTextField" destination="cgW-7Y-ZdA" id="TkS-As-HDL"/>
                         <segue destination="pZK-FG-S5B" kind="modal" identifier="LoginToChat" id="FqH-tF-Yby"/>
                     </connections>
@@ -71,6 +121,10 @@
         <scene sceneID="BJI-Gn-cdb">
             <objects>
                 <viewController id="u6l-ck-hB2" customClass="ChatViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="it1-wX-VDl"/>
+                        <viewControllerLayoutGuide type="bottom" id="NeD-wU-TLa"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="GgT-4T-Wm3">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
