--- a/ChatApp/Base.lproj/Main.storyboard
+++ b/ChatApp/Base.lproj/Main.storyboard
@@ -128,7 +128,97 @@
                     <view key="view" contentMode="scaleToFill" id="GgT-4T-Wm3">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KGs-3g-BFC">
+                                <rect key="frame" x="0.0" y="64" width="320" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Say something..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qSG-wC-GeH">
+                                        <rect key="frame" x="8" y="10" width="250" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRW-Ye-JDg">
+                                        <rect key="frame" x="266" y="10" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="8L8-eb-5Qr"/>
+                                        </constraints>
+                                        <state key="normal" title="Send"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.57647058819999997" green="0.7843137255" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="5AY-if-qQz"/>
+                                    <constraint firstAttribute="trailing" secondItem="qRW-Ye-JDg" secondAttribute="trailing" constant="8" id="GtB-iJ-tY9"/>
+                                    <constraint firstItem="qRW-Ye-JDg" firstAttribute="centerY" secondItem="KGs-3g-BFC" secondAttribute="centerY" id="Jx5-1O-BV4"/>
+                                    <constraint firstItem="qSG-wC-GeH" firstAttribute="leading" secondItem="KGs-3g-BFC" secondAttribute="leading" constant="8" id="a7h-fd-Yca"/>
+                                    <constraint firstItem="qRW-Ye-JDg" firstAttribute="leading" secondItem="qSG-wC-GeH" secondAttribute="trailing" constant="8" id="lhj-gV-htU"/>
+                                    <constraint firstItem="qSG-wC-GeH" firstAttribute="centerY" secondItem="KGs-3g-BFC" secondAttribute="centerY" id="tMf-3S-hkz"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LVO-do-dEC">
+                                <rect key="frame" x="0.0" y="114" width="320" height="454"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="68" id="bf4-1s-av6" customClass="MessageCell" customModule="ChatApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="68"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bf4-1s-av6" id="ZNz-BP-4et">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="67.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLd-Mu-ADW">
+                                                    <rect key="frame" x="8" y="0.0" width="66.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKf-ut-kqF">
+                                                    <rect key="frame" x="8" y="25" width="39.5" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gak-Qa-it3">
+                                                    <rect key="frame" x="240" y="0.0" width="72" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Gak-Qa-it3" secondAttribute="trailing" constant="8" id="FfK-xz-woH"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="hKf-ut-kqF" secondAttribute="bottom" constant="8" id="JgZ-6B-04j"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hKf-ut-kqF" secondAttribute="trailing" constant="8" id="MXm-7I-GCh"/>
+                                                <constraint firstItem="hKf-ut-kqF" firstAttribute="leading" secondItem="LLd-Mu-ADW" secondAttribute="leading" id="Uui-vT-NQh"/>
+                                                <constraint firstItem="LLd-Mu-ADW" firstAttribute="leading" secondItem="ZNz-BP-4et" secondAttribute="leading" constant="8" id="dzc-1X-tsY"/>
+                                                <constraint firstItem="hKf-ut-kqF" firstAttribute="top" secondItem="Gak-Qa-it3" secondAttribute="bottom" constant="8" id="gV2-84-nbe"/>
+                                                <constraint firstItem="Gak-Qa-it3" firstAttribute="baseline" secondItem="LLd-Mu-ADW" secondAttribute="baseline" id="hgd-Ib-zRt"/>
+                                                <constraint firstItem="LLd-Mu-ADW" firstAttribute="top" secondItem="ZNz-BP-4et" secondAttribute="top" id="nDM-Qq-fVA"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageLabel" destination="hKf-ut-kqF" id="tVF-r5-VcS"/>
+                                            <outlet property="timestampLabel" destination="Gak-Qa-it3" id="i53-bT-Zht"/>
+                                            <outlet property="usernameLabel" destination="LLd-Mu-ADW" id="pHO-ZS-CtM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="u6l-ck-hB2" id="1c7-an-Rfa"/>
+                                    <outlet property="delegate" destination="u6l-ck-hB2" id="RjK-BA-b4T"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="LVO-do-dEC" secondAttribute="trailing" id="DXy-wb-zyA"/>
+                            <constraint firstItem="LVO-do-dEC" firstAttribute="leading" secondItem="GgT-4T-Wm3" secondAttribute="leading" id="FiT-qW-6rB"/>
+                            <constraint firstItem="NeD-wU-TLa" firstAttribute="top" secondItem="LVO-do-dEC" secondAttribute="bottom" id="Pb8-Hz-IpM"/>
+                            <constraint firstAttribute="trailing" secondItem="KGs-3g-BFC" secondAttribute="trailing" id="dfb-cD-DDu"/>
+                            <constraint firstItem="KGs-3g-BFC" firstAttribute="top" secondItem="it1-wX-VDl" secondAttribute="bottom" id="psP-lq-87w"/>
+                            <constraint firstItem="LVO-do-dEC" firstAttribute="top" secondItem="KGs-3g-BFC" secondAttribute="bottom" id="w7F-8g-LIf"/>
+                            <constraint firstItem="KGs-3g-BFC" firstAttribute="leading" secondItem="GgT-4T-Wm3" secondAttribute="leading" id="ztg-0i-IGu"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Chit Chat" id="l1Y-OS-Bfl">
                         <barButtonItem key="leftBarButtonItem" title="Sign Out" id="3cf-jE-RgK">
@@ -137,6 +227,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="chatTextField" destination="qSG-wC-GeH" id="Qp5-ON-ouD"/>
+                        <outlet property="tableView" destination="LVO-do-dEC" id="j3r-vp-faL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ULn-Tp-A50" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
