--- a/ChatApp/Base.lproj/Main.storyboard
+++ b/ChatApp/Base.lproj/Main.storyboard
@@ -143,6 +143,9 @@
                                             <constraint firstAttribute="width" constant="46" id="8L8-eb-5Qr"/>
                                         </constraints>
                                         <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="onSendButtonTapped:" destination="u6l-ck-hB2" eventType="touchUpInside" id="IDx-eQ-dgH"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.57647058819999997" green="0.7843137255" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
